# amin

./: CMakeLists.txt  main.cpp
sources/: resources.qrc
src/: Bodyobject.cpp  Bodyobject.h  Decorator.cpp  Decorator.h  Game.cpp  Game.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Position.h
